oath android flag

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-test 12345
+<html>
+    <head>
+        <script type="text/javascript">
+            window.onload = getFlagPath;
+        </script>
+    </head>
+    <body>
+        
+        hacker 101 android oath flag
+    </body>
+</html>
