--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
-    <head>
-        <script type="text/javascript">
-            window.onload = getFlagPath;
-        </script>
-    </head>
     <body>
-        
+        <div id="flag"></div>
+        <script>document.getElementById("flag").innerHTML = iface.getFlagPath()</script>
         hacker 101 android oath flag
     </body>
 </html>
